# biolord

./: .cruft.json  .gitignore  .gitignore.rej  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .readthedocs.yaml  LICENSE  README.md  README.md.rej  pyproject.toml  pyproject.toml.rej
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml  test.yaml.rej
docs/: Makefile  api.md  conf.py  conf.py.rej  index.md  references.bib
docs/_templates/autosummary/: class.rst  class.rst.rej
docs/tutorials/: biolord_classify.ipynb  biolord_omics.ipynb  biolord_pipeline.ipynb
src/biolord/: __init__.py  _base_components.py  _constants.py  _data.py  _model.py  _module.py  _train.py  _utils.py
tests/: test_basic.py
